--- a/style.css
+++ b/style.css
@@ -11,10 +11,17 @@ body{
     align-items: center;
     justify-content: center;
 }
+header{
+    width: 100%;
+    height: 70px;
+    text-align: center;
+    background: #1d3044;
+    color: #fff;
+}
 .carousel-wrapper{
     /*display: flex;*/
     position: relative;
-    margin: 2rem 0rem;
+    margin: 0.1rem 0rem 2rem 0rem;
     overflow: hidden;
     width: 100%;
     min-height: 500px;
@@ -23,10 +30,10 @@ body{
     position: absolute;
     width: 100%;
     height: 100%;
-    clip-path: circle(0% at 0 50%);
+    clip-path: circle(0% at 100% 50%);
 }
 .carousel-wrapper .slide.active{
-    clip-path: circle(100% at 0% 50%);
+    clip-path: circle(100% at 70% 50%);
     transition: 2s;
 }
 .carousel-wrapper .slide img{
@@ -53,7 +60,8 @@ body{
 .prev-btn, .next-btn{
     z-index: 999;
     font-size: 2rem;
-    color: red;
+    color: #fff;
+    background: #1d3044;
     cursor: pointer;
     padding: 1rem;
 }
