--- a/style.css
+++ b/style.css
@@ -6,20 +6,20 @@
 }
 body{
     background: #fdf3f3f2;
-
-
     align-items: center;
     justify-content: center;
 }
 header{
     width: 100%;
     height: 70px;
+    display: flex;
+    align-items: center;
     text-align: center;
+    justify-content: center;
     background: #1d3044;
     color: #fff;
 }
 .carousel-wrapper{
-    /*display: flex;*/
     position: relative;
     margin: 0.1rem 0rem 2rem 0rem;
     overflow: hidden;
@@ -44,18 +44,21 @@ header{
 
 }
 .slide p{
-    font-size: 4rem;
+    font-size: 3rem;
     color: yellow;
     position: absolute;
+    background: green;
+    border-radius: 0.5rem;
+    padding: 1rem;
     top: 50%;
-    left: 50%;
+    left: 45%;
 }
 .control{
     height: 500px;
     display: flex;
     align-items: center;
     justify-content: space-between;
-
+    visibility: hidden;
 }
 .prev-btn, .next-btn{
     z-index: 999;
@@ -77,18 +80,26 @@ header{
     z-index: 999;
     transform: translateY(-50px);
     width: 20px;
-    height: 10px;
+    height: 20px;
     background: red;
     margin: 0 6px;
-    border-radius: 2px;
+    border-radius: 50%;
     box-shadow: 0 5px 25px(1 1 1 /20%);
 
 }
 .control-visibility .slide-icon.active{
     background: #4285F4;
 }
+
 footer{
-    margin: 4rem 0rem;
+    width: 100%;
+    height: 70px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    background: #1d3044;
+    color: #fff;
 }
 @media screen and (max-width:768px){
     .carousel-wrapper{
